# switchroom

./: Cargo.toml  Dockerfile  README.md  Switchroom.toml  build.sh  cloudbuild.yaml  docker-compose.yaml  entrypoint.sh
.github/: dependabot.yml
lib/: .gitignore  Cargo.toml  build.rs
lib/proto/: switchroom.proto
lib/src/: lib.rs
src/: bloom_filter.rs  certs.rs  config.rs  lib.rs  main.rs  messages.rs  metrics.rs  service.rs  storage.rs
