[package]
name = "switchroom"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]

[dependencies]
chrono = "0.4"
env_logger = { version = "0.6", default-features = false }
failure = "0.1"
foundationdb = { git = "https://github.com/bluejekyll/foundationdb-rs" }
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
lazy_static = "1.3"
log = "0.4"
prost = "0.5"
serde = "1.0"
serde_derive = "1.0"
sodiumoxide = "0.2"
switchroom-grpc = { path = "lib" }
tokio = "0.1"
toml = "0.5"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }
url = "1"
uuid = "0.7"
yansi = "0.5"

[dev-dependencies]
rand = "0.6"
