[package]
name = "switchroom"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
default-run = "switchroom"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
data-encoding = "2"
env_logger = { version = "0.7", default-features = false }
failure = "0.1"
foundationdb = { git = "https://github.com/brndnmtthws/foundationdb-rs" }
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = "0.1"
lazy_static = "1.3"
log = "0.4"
prost = "0.5"
serde = "1.0"
serde_derive = "1.0"
switchroom-grpc = { path = "lib" }
tokio = "1.1"
toml = "0.5"
tower-hyper = "0.1"
tower-request-modifier = "0.1"
tower-service = "0.2"
tower-util = "0.1"
url = "2"
uuid = "0.8"
yansi = "0.5"

[dev-dependencies]
rand = "0.7"

[patch.crates-io]
prometheus = { git = "https://github.com/brndnmtthws/rust-prometheus.git", branch = "superbranch" }
